<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="188dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:text="@string/passwords_and_privileges_commands"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_2"
        android:layout_width="188dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="392dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center_vertical"
        android:text="@string/contact_cisco"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_3"
        android:layout_width="188dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="152dp"
        android:background="@android:color/holo_red_light"
        android:gravity="center_vertical"
        android:text="@string/ip_security_options_commands"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_4"
        android:layout_width="188dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="276dp"
        android:background="@android:color/holo_purple"
        android:gravity="center_vertical"
        android:text="@string/secure_shell_commands"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Go1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="launchSecondActivity"
        android:text="@string/go_now"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/textView_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Go2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_red_light"
        android:onClick="launchThirdActivity"
        android:text="@string/go_now"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/textView_3"
        app:layout_constraintTop_toBottomOf="@+id/button_Go1" />

    <Button
        android:id="@+id/button_Go3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_purple"
        android:onClick="launchFourthActivity"
        android:text="@string/go_now"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/textView_4"
        app:layout_constraintTop_toBottomOf="@+id/button_Go2" />

    <Button
        android:id="@+id/button_Go14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_light"
        android:onClick="launchFifthActivity"
        android:text="@string/go_now"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/textView_2"
        app:layout_constraintTop_toBottomOf="@+id/button_Go3"
        app:layout_constraintVertical_bias="0.676" />

</android.support.constraint.ConstraintLayout>